--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,13 @@
+################################################
+############ TERMINAL SNAKE DIR ################
 # output files
 terminal_snake/output
 
 # terminal ascii table
 terminal_snake/docs
+
+# start_game symlink
+terminal_snake/start_game
+
+################################################
+#!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!#
