--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,10 @@
 ################################################
+################## ROOT DIR ####################
+
+.vscode
+
+################################################
+
 ############ TERMINAL SNAKE DIR ################
 # output files
 terminal_snake/output
