--- a/terminal_snake/.gitignore
+++ b/terminal_snake/.gitignore
@@ -1,7 +1,14 @@
 ################################################
-################## ROOT DIR ####################
+############ TERMINAL SNAKE DIR ################
 
-.vscode
+# output files
+output
+
+# docs folder
+docs
+
+# start_game symlink
+start_game
 
 ################################################
 #!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!#
