--- a/terminal_snake_CMake/Makefile
+++ b/terminal_snake_CMake/Makefile
@@ -1,6 +1,7 @@
 # output paths
 OUTPUT_PATH = output
 MAIN_PATH = $(OUTPUT_PATH)/main
+MENU_PATH = $(OUTPUT_PATH)/menu
 DISPLAY_PATH = $(OUTPUT_PATH)/display
 
 # Compiler flags
@@ -24,10 +25,11 @@ endif
 create_output_folders:
 	@mkdir -p $(OUTPUT_PATH)
 	@mkdir -p $(DISPLAY_PATH)
+	@mkdir -p $(MENU_PATH)
 	@mkdir -p $(MAIN_PATH)
 
-all: display main
-	$(GCC) $(MAIN_PATH)/main.o $(DISPLAY_PATH)/display.o -o $(OUTPUT_PATH)/start_game
+all: display menu main
+	$(GCC) $(MAIN_PATH)/main.o $(DISPLAY_PATH)/display.o $(MENU_PATH)/menu.o -o $(OUTPUT_PATH)/start_game
 
 	@chmod +x $(OUTPUT_PATH)/start_game
 #	Create symlink for the runnable
@@ -37,6 +39,9 @@ display: create_output_folders display/display.c
 	$(GCC) -c display/display.c -o $(DISPLAY_PATH)/display.o
 #	Copy the templates folder to output
 	@cp -r templates $(OUTPUT_PATH)/templates
+
+menu: create_output_folders menu/menu.c
+	$(GCC) -c menu/menu.c -o $(MENU_PATH)/menu.o
 
 main: create_output_folders main.c
 	$(GCC) -c main.c -o $(MAIN_PATH)/main.o
