--- a/terminal_snake_CMake/Makefile
+++ b/terminal_snake_CMake/Makefile
@@ -4,18 +4,36 @@ MAIN_PATH = $(OUTPUT_PATH)/main
 MENU_PATH = $(OUTPUT_PATH)/menu
 DISPLAY_PATH = $(OUTPUT_PATH)/display
 
+# OS_ENV == 1 -> Windows
+# OS_ENV == 2 -> Linux 
+OS_ENV1 = WINDOWS_ENV
+OS_ENV2 = LINUX_ENV
+
 # Compiler flags
 COMPILER_FLAGS = -Wall
+
+# mandatory parameter, if doesn't exist then the make will fail
+ifndef OS_ARG
+$(error Mandatory parameter not set, OS_ARG! Check the help menu: make help)
+endif
+
+# set the OS if the parameter exist's
+ifeq ($(OS_ARG), 1)
+	OS_ENV = $(OS_ENV1)
+endif
+ifeq ($(OS_ARG), 2)
+	OS_ENV = $(OS_ENV2)
+endif
 
 # Check if disable warnings flag is settled and is equal with 1
 ifdef warnings_s
 ifeq ($(warnings_s), 1)
-GCC = gcc
+GCC = gcc -D$(OS_ENV)
 endif
 endif
 
 ifndef GCC
-GCC = gcc $(COMPILER_FLAGS)
+GCC = gcc $(COMPILER_FLAGS) -D$(OS_ENV)
 endif
 
 
@@ -53,4 +71,4 @@ clean:
 	rm -r -f $(OUTPUT_PATH)
 	rm -f start_game
 
-TODO: make help menu for flags and commands
+# TODO: make help menu for flags and commands
